@@ -1,5 +1,7 @@
 =pod
 
+=for comment openssl_manual_section:7
+
 =head1 NAME
 
 Modes of DES - the variants of DES and other crypto algorithms of OpenSSL
